feat: Configurar Codemagic para deploy iOS e corrigir assinatura AAB Android
- Atualizado codemagic.yaml com workflow iOS completo
- Criado guia completo CODEMAGIC_SETUP.md
- Criado guia rÃ¡pido CODEMAGIC_QUICK_START.md
- Atualizado android/key.properties com keystore de produÃ§Ã£o
- Corrigido caminho do keystore no build.gradle
- VersÃ£o atualizada para 1.3.6+41
- Melhorias nos scripts de build e logs de assinatura

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,19 +61,51 @@ android {
         versionName flutterVersionName
     }
 
+    // Splits removido - usar --split-per-abi no comando flutter build apk quando necessário
+    // Para flutter run (desenvolvimento), não precisa de splits
+
    signingConfigs {
        release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
+           if (keystorePropertiesFile.exists()) {
+               def storeFilePath = keystoreProperties['storeFile']
+               if (storeFilePath) {
+                   def keystoreFileObj = file(storeFilePath)
+                   if (keystoreFileObj.exists()) {
+                       keyAlias keystoreProperties['keyAlias']
+                       keyPassword keystoreProperties['keyPassword']
+                       storeFile keystoreFileObj
+                       storePassword keystoreProperties['storePassword']
+                       println "✓ Keystore configurado: ${keystoreFileObj.absolutePath}"
+                   } else {
+                       println "✗ Keystore não encontrado: ${keystoreFileObj.absolutePath}"
+                   }
+               }
+           }
        }
    }
 
     buildTypes {
         release {
-            signingConfig signingConfigs.release
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // Só usa assinatura se o keystore existir e o arquivo estiver disponível
+            if (keystorePropertiesFile.exists()) {
+                def storeFilePath = keystoreProperties['storeFile']
+                if (storeFilePath) {
+                    def keystoreFile = file(storeFilePath)
+                    if (keystoreFile.exists()) {
+                        signingConfig signingConfigs.release
+                        println "✓ Assinatura aplicada ao build release"
+                    } else {
+                        println "✗ Keystore não encontrado, build sem assinatura: ${keystoreFile.absolutePath}"
+                    }
+                }
+            }
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
