--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+3
+version: 1.3.6+41
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -62,6 +62,7 @@ dependencies:
   mask_text_input_formatter: 2.9.0
   mime_type: 1.0.0
   page_transition: 2.1.0
+  path: 1.9.1
   path_provider: 2.1.4
   path_provider_android: 2.2.10
   path_provider_foundation: 2.4.0
