--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -60,19 +60,40 @@ jobs:
           CERTIFICATE_BASE64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
           CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
         run: |
+          echo "📥 Importando certificado..."
           echo "$CERTIFICATE_BASE64" | base64 --decode > certificate.p12
-          security import certificate.p12 -k build.keychain -P "$CERTIFICATE_PASSWORD" -T /usr/bin/codesign
+          security import certificate.p12 -k build.keychain -P "$CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "${{ secrets.KEYCHAIN_PASSWORD }}" build.keychain
+          security unlock-keychain -p "${{ secrets.KEYCHAIN_PASSWORD }}" build.keychain
           rm certificate.p12
+          echo "✅ Certificado importado"
+
+      - name: Verify certificate import
+        run: |
+          echo "🔍 Verificando certificados importados no keychain..."
+          echo "--- Certificados no build.keychain ---"
+          security find-identity -v -p codesigning build.keychain || true
+          echo ""
+          echo "--- Verificando se o certificado está acessível ---"
+          security find-identity -v -p codesigning | grep -i "distribution" || echo "⚠️ Nenhum certificado Distribution encontrado no sistema"
+          echo "✅ Verificação concluída"
 
       - name: Install provisioning profile
         env:
           PROVISIONING_PROFILE_BASE64: ${{ secrets.APPLE_PROVISIONING_PROFILE_BASE64 }}
         run: |
+          echo "📱 Instalando provisioning profile..."
           echo "$PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
+          
+          # Extrair UUID do profile
+          UUID=$(/usr/libexec/PlistBuddy -c "Print UUID" /dev/stdin <<< $(security cms -D -i profile.mobileprovision))
+          echo "UUID do profile: $UUID"
+          
+          # Copiar com o UUID correto
+          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
           rm profile.mobileprovision
+          echo "✅ Provisioning profile instalado"
 
       - name: Get version from pubspec.yaml
         id: version
@@ -84,15 +105,48 @@ jobs:
           echo "Version: $VERSION"
           echo "Build: $BUILD"
 
+      - name: Prepare ExportOptions.plist
+        env:
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.PROVISIONING_PROFILE_SPECIFIER }}
+        run: |
+          if [ -n "$APPLE_TEAM_ID" ]; then
+            sed -i.bak "s/\$(APPLE_TEAM_ID)/$APPLE_TEAM_ID/g" ios/ExportOptions.plist
+            rm -f ios/ExportOptions.plist.bak
+            echo "✅ Team ID substituído: $APPLE_TEAM_ID"
+          else
+            echo "⚠️ APPLE_TEAM_ID não configurado"
+          fi
+          if [ -n "$PROVISIONING_PROFILE_SPECIFIER" ]; then
+            sed -i.bak "s/\$(PROVISIONING_PROFILE_SPECIFIER)/$PROVISIONING_PROFILE_SPECIFIER/g" ios/ExportOptions.plist
+            rm -f ios/ExportOptions.plist.bak
+            echo "✅ Provisioning Profile Specifier substituído: $PROVISIONING_PROFILE_SPECIFIER"
+          else
+            echo "⚠️ PROVISIONING_PROFILE_SPECIFIER não configurado"
+          fi
+          echo "📄 Conteúdo do ExportOptions.plist:"
+          cat ios/ExportOptions.plist
+
       - name: Build IPA
         env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APP_SPECIFIC_PASSWORD: ${{ secrets.APP_SPECIFIC_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
+          echo "📦 Iniciando build do IPA..."
+          echo "Versão: ${{ steps.version.outputs.version }}"
+          echo "Build: ${{ steps.version.outputs.build }}"
+          
+          # Garantir que o keychain está desbloqueado
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
+          
+          # Listar certificados disponíveis antes do build
+          echo "--- Certificados disponíveis antes do build ---"
+          security find-identity -v -p codesigning build.keychain
+          
           flutter build ipa --release \
             --build-name="${{ steps.version.outputs.version }}" \
             --build-number="${{ steps.version.outputs.build }}" \
             --export-options-plist=ios/ExportOptions.plist
+          echo "✅ Build concluído"
 
       - name: Find IPA file
         id: find_ipa
