--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -18,7 +18,7 @@
 	<string>Apple Distribution</string>
 	<key>provisioningProfiles</key>
 	<dict>
-		<key>com.mycompany.mcguidedose.apps</key>
+		<key>com.companyname.medcalc</key>
 		<string>$(PROVISIONING_PROFILE_SPECIFIER)</string>
 	</dict>
 </dict>
