feat: Alterar bundle ID para com.mycompany.mcguidedose.apps e configurar deploy iOS
- Alterado bundle ID de com.companyname.medcalc para com.mycompany.mcguidedose.apps
- Atualizado ExportOptions.plist com novo bundle ID
- Corrigido codemagic.yaml para usar ExportOptions.plist local
- Adicionada documentaÃ§Ã£o para configuraÃ§Ã£o de credenciais Apple

--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -18,7 +18,7 @@
 	<string>Apple Distribution</string>
 	<key>provisioningProfiles</key>
 	<dict>
-		<key>com.companyname.medcalc</key>
+		<key>com.mycompany.mcguidedose.apps</key>
 		<string>$(PROVISIONING_PROFILE_SPECIFIER)</string>
 	</dict>
 </dict>
